sites/indigo/clusters/dal-indigo-core-1/phase-3-auth/overlays/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: auth.dalmura.cloud
    external-dns.alpha.kubernetes.io/target: indigo.dalmura.cloud
    metallb.universe.tf/address-pool: servers-vlan
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: ingress-public
  tls:
    - hosts:
      - auth.dalmura.cloud
      secretName: keycloak-cert
  rules:
  - host: auth.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
